Don't include NEEDED items that are ALREADY in the ROOter distrib

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,16 @@ Thumbs.db
 .#*
 .afpDeleted*
 
+# needed, but ALREADY included in ROOTer -----------------
+www/luci-static/bootstrap/
+www/luci-static/rooter/js/jquery.min.js
+
 
 # ignored dirs -----------------
 
 
 # ignored files -----------------
 __*
+
 
 !.gitkeep
